package org.prototype.demo.services;

import org.prototype.demo.external-service.IExternalService;


public class BookingService implements IExternalService {
    
}
