@startuml
'Booking is een voorbeeld in deze diagram; het kan een ander externe api zjn
class BookingController{
    + getBookingData()
}

class BookingService{
 + getBookingData()
}

class ExternalController{
+ ErrorHandlerImplementation
+ makeAPICall()
}

interface ExternalErrorStrategy{
- returnAPIErrorResponse()
}

class BookingErrorHandler{
- returnAPIErrorResponse()
}

BookingController "1" --> "1" BookingService
BookingService "1" --> "1" ExternalController

ExternalController "1" --> "1..*" BookingErrorHandler
BookingErrorHandler ..|> ExternalErrorStrategy

@enduml